2016-10-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Permit noncharacter unicode codepoints
	* Source/GSString.m: Permit noncharacter unicode codepoints
	* Source/NSNotificationQueue.m: Call GSPrivateCheckTasks()
	* Source/NSRunLoop.m: Let GSPrivateNotifyASAP() check for task exit.

2016-09-19  Niels Grewe <niels.grewe@halbordnung.de>>

	* Source/Additions/GSMime.m (charsetForXml):
	Fix detection of charset in XML document.
	* Tests/base/GSMime/xml-charset.m: Test case.

2016-09-16  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/Additions/GSMime.m (convertTo7BitSafe):
	Add missing checks to avoid calling caseInsensitiveCompare: with a
	nil argument.

2016-09-16  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTLS.m: Fix bug removing mapped certificates.

2016-09-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSScanner.h:
	* Source/NSScanner.m:
	* Tests/base/NSScanner/test01.m:
	Add support for scanHexLongLong method inspired/based on patch from
	Abbas Raza, but with minor bugfixes, reduced code duplication, and
	avoiding compiler warnings.

2016-08-30  Abbas Raza <abbas.raza.1707@gmail.com>

	* Source/NSJSONSerialization.m: Generate NSError rather than raising
	exception if the trailing '"' in the dsocument is missing.

2016-08-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMime.m: Fix typo which was causing premature termination of
	long headers.

2016-08-19  Richard Frith-Macdonald <rfm@gnu.org>

	* config/objc-common.g: Darwin patch by David Wetzel
	* Source/CompatibilityHeaders.make: Delete obsolete file
	* configure.ac: Check for libdispatch runloop integration functions
	* Headers/GNUstepBase/GSConfig.h.in: New define for libdispatch
	* config.mak.in: New define for libdispatch
	* Tests/base/NSRunLoop/dispatch.m: Use new define
	* configure: Regenerate
	* Source/Additions/Makefile.preamble:
	* Source/GNUmakefile:
	* Source/Makefile.postamble:
	* Source/Makefile.preamble: